--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="size">Size:</string>
     <string name="plus">+</string>
     <string name="register">Register</string>
+    <string name="nombre">Nombre:</string>
+    <string name="email">Email:</string>
+    <string name="username">username</string>
 </resources>
